# collectitional-branching

./: .gitignore  Dockerfile  README.md  mapreduce-sim.cc
benchmark/: README.md  matrixMatrix.py  matrixVector.py  pim_build_plot.py  reformat-vec.py  vec_add.py  vec_dot.py
benchmarks/: README.md
mapping-algorithm/: CMakeLists.txt  README.md
mapping-algorithm/src/: hash.cpp  hash.h  main.cpp  map.cpp  map.h  model.cpp  model.h  types.h  utils.cpp  utils.h
results/pim/: pim_mat_mat.csv
scripts/: push-and-run.sh  push.sh  run.sh
